# Mario-1

./: README.md  main.py  pyproject.toml  server.py  template
backup/: bk
template/: comandi  eventi  funzioni  raid  status  triggered
